--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(NobBS)
 export(NobBS.strat)
 import(coda)
 import(rjags)
+importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,last)
 importFrom(dplyr,left_join)
@@ -16,3 +17,4 @@ importFrom(magrittr,"%>%")
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,update)
+importFrom(tidyselect,vars_select)
